--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Mobile-first approach */
 :root {
     --primary-color: rgb(75, 0, 130);
-    --accent-color: rgb(252, 194, 0);
+    --accent-color: rgb(255, 222, 89); /* Updated to #ffde59 */
     --tertiary-color: rgb(255, 255, 255);
     --text-color: #333;
     --background-color: #f5f5f5;
@@ -319,7 +319,7 @@ img:not(.logo) {
     }
 
     .nav-link {
-       : 1rem;
+        font-size: 1rem;
     }
 
     .dropdown-menu {
